[gd_scene load_steps=13 format=3 uid="uid://0053qxe7jhi5"]

[ext_resource type="FontFile" uid="uid://dsgfusu2nhuj2" path="res://resources/fonts/IrishUncialfabeta-Bold.ttf" id="1_80pi6"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_xgic5"]
[ext_resource type="Texture2D" uid="uid://5d3chxas6ay3" path="res://resources/images/notfound.png" id="3_jttmj"]
[ext_resource type="AudioStream" uid="uid://dcu2h8uobqcyj" path="res://resources/sfx/oy.wav" id="3_omjq6"]
[ext_resource type="Texture2D" uid="uid://mopng53x0bnc" path="res://resources/images/Creatures/Creature_2_Ladybird/photo.png" id="4_8crk1"]
[ext_resource type="Texture2D" uid="uid://dyvkfvhql4fa5" path="res://resources/images/Creatures/Creature_1_Hole/photo.png" id="5_rkfxn"]
[ext_resource type="Texture2D" uid="uid://cslwjouejkcgi" path="res://resources/images/Creatures/Creature_3_Squirrel/photo.png" id="7_6bupv"]
[ext_resource type="Texture2D" uid="uid://8oaxbt7atjp0" path="res://resources/images/Creatures/Creature_4_rock_paraletruc/photo.png" id="8_vn3bm"]
[ext_resource type="Texture2D" uid="uid://dsdqc0m5sa3wo" path="res://resources/images/Creatures/Creature_5_ent/photo.png" id="9_bevr6"]
[ext_resource type="Texture2D" uid="uid://cgxblrc4qks3i" path="res://resources/images/Creatures/Creature_6_deer/photo.png" id="10_bieos"]
[ext_resource type="Texture2D" uid="uid://cy6y13nw3ufia" path="res://resources/images/Creatures/Creature_7_bug/photo.png" id="11_56sdl"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_46ve6"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("3_omjq6")

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(631, 358)
script = ExtResource("1_xgic5")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -642.0
offset_top = -359.0
offset_right = 637.0
offset_bottom = 363.0
pivot_offset = Vector2(1, 0)
color = Color(0.443137, 0.443137, 0.443137, 0.760784)

[node name="message" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -87.5
offset_right = 181.5
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-457.5, -274.5)
color = Color(0.489622, 0.489622, 0.489622, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="message"]
layout_mode = 0
offset_left = 23.0
offset_top = 44.0
offset_right = 351.0
offset_bottom = 151.0
theme_override_fonts/normal_font = ExtResource("1_80pi6")
theme_override_font_sizes/bold_italics_font_size = 1
theme_override_font_sizes/normal_font_size = 21
text = "Dinerâ€™s ready ! Get back home !"
tab_size = 3

[node name="Button" type="Button" parent="message"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -60.0
offset_right = 36.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_80pi6")
text = "go home"

[node name="EndMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -637.0
offset_top = -359.0
offset_right = -597.0
offset_bottom = -319.0

[node name="RichTextLabel" type="RichTextLabel" parent="EndMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 439.0
offset_top = 172.0
offset_right = 821.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(188, 26)
theme_override_colors/default_color = Color(0.969029, 0.974905, 0.976206, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_80pi6")
theme_override_font_sizes/normal_font_size = 40
text = "Thanks for playing"

[node name="VBoxContainer" type="VBoxContainer" parent="EndMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 546.0
offset_top = 290.0
offset_right = 684.0
offset_bottom = 392.0
grow_horizontal = 2
grow_vertical = 2

[node name="replay" type="Button" parent="EndMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_80pi6")
text = "Play Again"

[node name="HSeparator" type="HSeparator" parent="EndMenu/VBoxContainer"]
layout_mode = 2

[node name="menu" type="Button" parent="EndMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_80pi6")
text = "Return to menu"

[node name="HSeparator2" type="HSeparator" parent="EndMenu/VBoxContainer"]
layout_mode = 2

[node name="quit" type="Button" parent="EndMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_80pi6")
text = "Quit"

[node name="album" type="Control" parent="EndMenu"]
anchors_preset = 0
offset_left = 637.0
offset_top = 359.0
offset_right = 677.0
offset_bottom = 399.0

[node name="Creature_1" type="Control" parent="EndMenu/album"]
layout_mode = 3
anchors_preset = 0
offset_left = 226.0
offset_top = -119.0
offset_right = 266.0
offset_bottom = -79.0
rotation = 0.409546

[node name="notfound" type="TextureRect" parent="EndMenu/album/Creature_1"]
layout_mode = 0
offset_right = 130.0
offset_bottom = 112.0
texture = ExtResource("3_jttmj")

[node name="found" type="TextureRect" parent="EndMenu/album/Creature_1"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_rkfxn")

[node name="Creature_2" type="Control" parent="EndMenu/album"]
layout_mode = 3
anchors_preset = 0
offset_left = -539.0
offset_top = -299.0
offset_right = -499.0
offset_bottom = -259.0
rotation = -0.244979

[node name="notfound" type="TextureRect" parent="EndMenu/album/Creature_2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_jttmj")

[node name="found" type="TextureRect" parent="EndMenu/album/Creature_2"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_8crk1")

[node name="Creature_3" type="Control" parent="EndMenu/album"]
layout_mode = 3
anchors_preset = 0
offset_left = -496.0
offset_top = 107.0
offset_right = -456.0
offset_bottom = 147.0
rotation = 0.0274284

[node name="notfound" type="TextureRect" parent="EndMenu/album/Creature_3"]
layout_mode = 0
offset_right = 171.0
offset_bottom = 145.0
texture = ExtResource("3_jttmj")

[node name="found" type="TextureRect" parent="EndMenu/album/Creature_3"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_6bupv")

[node name="Creature_4" type="Control" parent="EndMenu/album"]
layout_mode = 3
anchors_preset = 0
offset_left = 286.0
offset_top = 125.0
offset_right = 326.0
offset_bottom = 165.0
rotation = -0.135299

[node name="notfound" type="TextureRect" parent="EndMenu/album/Creature_4"]
layout_mode = 0
offset_right = 143.0
offset_bottom = 107.0
texture = ExtResource("3_jttmj")

[node name="found" type="TextureRect" parent="EndMenu/album/Creature_4"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_vn3bm")

[node name="Creature_5" type="Control" parent="EndMenu/album"]
layout_mode = 3
anchors_preset = 0
offset_left = -296.0
offset_top = -71.0001
offset_right = -256.0
offset_bottom = -31.0001
rotation = -0.0186812

[node name="notfound" type="TextureRect" parent="EndMenu/album/Creature_5"]
layout_mode = 0
offset_left = 3.05176e-05
offset_top = -19.0
offset_right = 148.0
offset_bottom = 155.0
texture = ExtResource("3_jttmj")

[node name="found" type="TextureRect" parent="EndMenu/album/Creature_5"]
visible = false
layout_mode = 0
offset_left = 0.373627
offset_top = -19.9965
offset_right = 144.374
offset_bottom = 154.003
texture = ExtResource("9_bevr6")

[node name="Creature_6" type="Control" parent="EndMenu/album"]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0001
offset_top = 133.0
offset_right = 57.0001
offset_bottom = 173.0
rotation = -0.00759642

[node name="notfound" type="TextureRect" parent="EndMenu/album/Creature_6"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 190.0
texture = ExtResource("3_jttmj")

[node name="found" type="TextureRect" parent="EndMenu/album/Creature_6"]
visible = false
layout_mode = 0
offset_right = 152.0
offset_bottom = 189.0
texture = ExtResource("10_bieos")
expand_mode = 1

[node name="Creature_7" type="Control" parent="EndMenu/album"]
layout_mode = 3
anchors_preset = 0
offset_left = -65.9999
offset_top = -347.0
offset_right = -25.9999
offset_bottom = -307.0
rotation = -0.00759642

[node name="notfound" type="TextureRect" parent="EndMenu/album/Creature_7"]
layout_mode = 0
offset_right = 163.0
offset_bottom = 156.0
texture = ExtResource("3_jttmj")

[node name="found" type="TextureRect" parent="EndMenu/album/Creature_7"]
visible = false
layout_mode = 0
offset_right = 165.0
offset_bottom = 157.0
texture = ExtResource("11_56sdl")
expand_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_46ve6")

[connection signal="pressed" from="message/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="EndMenu/VBoxContainer/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="EndMenu/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="EndMenu/VBoxContainer/quit" to="." method="_on_quit_pressed"]
